[OSPK8-322] Introduce ipset again to also support service VIPs
This re-introduce the ipset concept, which gives the flexibility
to request separate IPs for additional services, which is required
for OSP17 (OVNDBs, Redis). With the IPset also used for the
other resources (osclient, vmset, bmset) all of them use the
same mechanism and workflow to create hostnames and assign IPs.

With this change also alligns the scale up/down steps/procedure
from vmset and bmset, as they were not alligned.

--- a/config/crd/bases/osp-director.openstack.org_openstackcontrolplanes.yaml
+++ b/config/crd/bases/osp-director.openstack.org_openstackcontrolplanes.yaml
@@ -61,6 +61,16 @@ spec:
           spec:
             description: OpenStackControlPlaneSpec defines the desired state of OpenStackControlPlane
             properties:
+              additionalServiceVIPs:
+                additionalProperties:
+                  type: string
+                description: 'AdditionalServiceVIPs - Map of service name <-> subnet
+                  nameLower for which a IP should get reserved on These are used to
+                  create the <Service>VirtualFixedIPs environment parameters starting
+                  wallaby/OSP17.0. Default "Redis":  "internal_api",         "OVNDBs":
+                  "internal_api", https://docs.openstack.org/project-deploy-guide/tripleo-docs/latest/deployment/network_v2.html#service-virtual-ips
+                  Note: OSP17 networkv2 only'
+                type: object
               caConfigMap:
                 description: Name of the config map containing custom CA certificates
                   to trust
