--- a/tests/kuttl/common/tests/create_openstackcontrolplane_single_net-assert.yaml
+++ b/tests/kuttl/common/tests/create_openstackcontrolplane_single_net-assert.yaml
@@ -52,7 +52,7 @@ status:
       hostname: controlplane
       ipaddresses:
         ctlplane: 192.168.25.10/24
-      provisioningState: Provisioned
+      provisioningState: Created
 ---
 apiVersion: osp-director.openstack.org/v1beta1
 kind: OpenStackVMSet
