--- a/tests/kuttl/tests/openstackbaremetalset_scale/04-assert.yaml
+++ b/tests/kuttl/tests/openstackbaremetalset_scale/04-assert.yaml
@@ -135,10 +135,12 @@ spec:
       - deleted: false
         hostname: compute-0
         ip: 192.168.25.40
+        serviceVIP: false
         vip: false
       - deleted: false
         hostname: compute-1
         ip: 192.168.25.100
+        serviceVIP: false
         vip: false
     ControlPlane:
       addToPredictableIPs: true
@@ -146,6 +148,7 @@ spec:
       - deleted: false
         hostname: controlplane
         ip: 192.168.25.10
+        serviceVIP: false
         vip: true
     OpenstackClientopenstackclient:
       addToPredictableIPs: false
@@ -153,6 +156,7 @@ spec:
       - deleted: false
         hostname: openstackclient-0
         ip: 192.168.25.251
+        serviceVIP: false
         vip: false
 status:
   conditions:
@@ -191,10 +195,12 @@ spec:
       - deleted: false
         hostname: compute-0
         ip: 172.17.0.40
+        serviceVIP: false
         vip: false
       - deleted: false
         hostname: compute-1
         ip: 172.17.0.11
+        serviceVIP: false
         vip: false
     ControlPlane:
       addToPredictableIPs: true
@@ -202,6 +208,7 @@ spec:
       - deleted: false
         hostname: controlplane
         ip: 172.17.0.10
+        serviceVIP: false
         vip: true
     OpenstackClientopenstackclient:
       addToPredictableIPs: false
@@ -209,6 +216,7 @@ spec:
       - deleted: false
         hostname: openstackclient-0
         ip: 172.17.0.251
+        serviceVIP: false
         vip: false
 status:
   conditions:
@@ -247,10 +255,12 @@ spec:
       - deleted: false
         hostname: compute-0
         ip: 172.20.0.40
+        serviceVIP: false
         vip: false
       - deleted: false
         hostname: compute-1
         ip: 172.20.0.10
+        serviceVIP: false
         vip: false
 status:
   conditions:
