--- a/tests/kuttl/tests/openstackbaremetalset_scale/06-assert.yaml
+++ b/tests/kuttl/tests/openstackbaremetalset_scale/06-assert.yaml
@@ -105,10 +105,12 @@ spec:
       - deleted: true
         hostname: compute-0
         ip: 192.168.25.40
+        serviceVIP: false
         vip: false
       - deleted: false
         hostname: compute-1
         ip: 192.168.25.100
+        serviceVIP: false
         vip: false
     ControlPlane:
       addToPredictableIPs: true
@@ -116,6 +118,7 @@ spec:
       - deleted: false
         hostname: controlplane
         ip: 192.168.25.10
+        serviceVIP: false
         vip: true
     OpenstackClientopenstackclient:
       addToPredictableIPs: false
@@ -123,6 +126,7 @@ spec:
       - deleted: false
         hostname: openstackclient-0
         ip: 192.168.25.251
+        serviceVIP: false
         vip: false
 status:
   conditions:
@@ -161,10 +165,12 @@ spec:
       - deleted: true
         hostname: compute-0
         ip: 172.17.0.40
+        serviceVIP: false
         vip: false
       - deleted: false
         hostname: compute-1
         ip: 172.17.0.11
+        serviceVIP: false
         vip: false
     ControlPlane:
       addToPredictableIPs: true
@@ -172,6 +178,7 @@ spec:
       - deleted: false
         hostname: controlplane
         ip: 172.17.0.10
+        serviceVIP: false
         vip: true
     OpenstackClientopenstackclient:
       addToPredictableIPs: false
@@ -179,6 +186,7 @@ spec:
       - deleted: false
         hostname: openstackclient-0
         ip: 172.17.0.251
+        serviceVIP: false
         vip: false
 status:
   conditions:
@@ -217,10 +225,12 @@ spec:
       - deleted: true
         hostname: compute-0
         ip: 172.20.0.40
+        serviceVIP: false
         vip: false
       - deleted: false
         hostname: compute-1
         ip: 172.20.0.10
+        serviceVIP: false
         vip: false
 status:
   conditions:
