--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -17,6 +17,7 @@ resources:
 - bases/osp-director.openstack.org_openstackbackups.yaml
 - bases/osp-director.openstack.org_openstackbackuprequests.yaml
 - bases/osp-director.openstack.org_openstackdeploys.yaml
+- bases/osp-director.openstack.org_openstackipsets.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -38,6 +39,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_openstackbackups.yaml
 #- patches/webhook_in_openstackbackuprequests.yaml
 #- patches/webhook_in_openstackdeploys.yaml
+#- patches/webhook_in_openstackipsets.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -58,6 +60,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_openstackbackups.yaml
 #- patches/cainjection_in_openstackbackuprequests.yaml
 - patches/cainjection_in_openstackdeploys.yaml
+#- patches/cainjection_in_openstackipsets.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
