--- a/templates/openstackconfiggenerator/config/17.0/rendered-tripleo-config.yaml
+++ b/templates/openstackconfiggenerator/config/17.0/rendered-tripleo-config.yaml
@@ -125,6 +125,21 @@ parameter_defaults:
 {{- end }}
 {{- end }}
   #
+  # Set VIP's for redis and OVN
+{{- range $roleid, $role := .RolesMap }}
+{{- if $role.IsControlPlane }}
+{{- range $nodeid, $node := $role.Nodes }}
+{{- range $netname, $ip := $node.IPaddr }}
+{{- if $node.ServiceVIP }}
+  {{ $role.Name }}VirtualFixedIPs:
+    - ip_address: {{ $ip.IPaddr }}
+      use_neutron: false
+{{- end }}
+{{- end }}
+{{- end }}
+{{- end }}
+{{- end }}
+  #
   # OVNStaticBridgeMacMappings
   OVNStaticBridgeMacMappings:
 {{- range $roleid, $role := .RolesMap }}
