--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -46,21 +46,20 @@ patchesStrategicMerge:
 # patches here are for enabling the CA injection for each CRD
 - patches/cainjection_in_openstackcontrolplanes.yaml
 - patches/cainjection_in_openstackvmsets.yaml
-#- patches/cainjection_in_openstackprovisionservers.yaml
+- patches/cainjection_in_openstackprovisionservers.yaml
 - patches/cainjection_in_openstackbaremetalsets.yaml
-#- patches/cainjection_in_openstackclients.yaml
+- patches/cainjection_in_openstackclients.yaml
 - patches/cainjection_in_openstacknets.yaml
-#- patches/cainjection_in_openstackpredictableips.yaml
-#- patches/cainjection_in_openstackconfiggenerators.yaml
+- patches/cainjection_in_openstackconfiggenerators.yaml
 - patches/cainjection_in_openstackephemeralheats.yaml
 #- patches/cainjection_in_openstackmacaddresses.yaml
 #- patches/cainjection_in_openstackconfigversions.yaml
 - patches/cainjection_in_openstacknetconfigs.yaml
 - patches/cainjection_in_openstacknetattachments.yaml
-#- patches/cainjection_in_openstackbackups.yaml
-#- patches/cainjection_in_openstackbackuprequests.yaml
+- patches/cainjection_in_openstackbackups.yaml
+- patches/cainjection_in_openstackbackuprequests.yaml
 - patches/cainjection_in_openstackdeploys.yaml
-#- patches/cainjection_in_openstackipsets.yaml
+- patches/cainjection_in_openstackipsets.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
