--- a/tests/kuttl/tests/openstackbaremetalset_scale/03-create_openstackbaremetalset.yaml
+++ b/tests/kuttl/tests/openstackbaremetalset_scale/03-create_openstackbaremetalset.yaml
@@ -4,6 +4,9 @@ commands:
   # Create the required userpassword Secret
   - command: oc apply -f ../../common/manifests/userpassword.yaml
     namespaced: true
+  # Create the provisionserver
+  - command: oc apply -f ../../../../config/samples/osp-director_v1beta1_openstackprovisionserver.yaml
+    namespaced: true
   # Create the OpenStackBaremetalSet from sample YAML
   - command: oc apply -f ../../../../config/samples/osp-director_v1beta1_openstackbaremetalset.yaml
     namespaced: true
