--- a/config/crd/bases/osp-director.openstack.org_openstackbaremetalsets.yaml
+++ b/config/crd/bases/osp-director.openstack.org_openstackbaremetalsets.yaml
@@ -85,6 +85,10 @@ spec:
               deploymentSSHSecret:
                 description: Name of secret holding the stack-admin ssh keys
                 type: string
+              dnsSearchDomains:
+                items:
+                  type: string
+                type: array
               hardwareReqs:
                 description: Hardware requests for sub-selection of BaremetalHosts
                   with certain hardware specs
