--- a/config/crd/bases/osp-director.openstack.org_openstackvmsets.yaml
+++ b/config/crd/bases/osp-director.openstack.org_openstackvmsets.yaml
@@ -66,9 +66,69 @@ spec:
           spec:
             description: OpenStackVMSetSpec defines the desired state of an OpenStackVMSet
             properties:
+              additionalDisks:
+                description: AdditionalDisks additional disks to add to the VMI
+                items:
+                  description: OpenStackVMSetAdditionalDisk defines additional disk
+                    properties
+                  properties:
+                    dedicatedIOThread:
+                      default: false
+                      description: DedicatedIOThread - Disks with dedicatedIOThread
+                        set to true will be allocated an exclusive thread. This is
+                        generally useful if a specific Disk is expected to have heavy
+                        I/O traffic, e.g. a database spindle.
+                      type: boolean
+                    diskSize:
+                      description: Disc size in GB
+                      format: int32
+                      type: integer
+                    name:
+                      description: Name of the additional disk, e.g. used to do the
+                        PVC request
+                      type: string
+                    storageAccessMode:
+                      default: ReadWriteMany
+                      description: StorageAccessMode - Virtual machines must have
+                        a persistent volume claim (PVC) with a shared ReadWriteMany
+                        (RWX) access mode to be live migrated.
+                      enum:
+                      - ReadWriteOnce
+                      - ReadWriteMany
+                      type: string
+                    storageClass:
+                      description: StorageClass to be used for the disk
+                      type: string
+                    storageVolumeMode:
+                      default: Filesystem
+                      description: 'StorageVolumeMode - When using OpenShift Virtualization
+                        with OpenShift Container Platform Container Storage, specify
+                        RBD block mode persistent volume claims (PVCs) when creating
+                        virtual machine disks. With virtual machine disks, RBD block
+                        mode volumes are more efficient and provide better performance
+                        than Ceph FS or RBD filesystem-mode PVCs. To specify RBD block
+                        mode PVCs, use the ''ocs-storagecluster-ceph-rbd'' storage
+                        class and VolumeMode: Block.'
+                      enum:
+                      - Block
+                      - Filesystem
+                      type: string
+                  required:
+                  - diskSize
+                  - name
+                  type: object
+                type: array
               baseImageVolumeName:
                 description: BaseImageVolumeName used as the base volume for the VM
                 type: string
+              blockMultiQueue:
+                default: false
+                description: Block Multi-Queue is a framework for the Linux block
+                  layer that maps Device I/O queries to multiple queues. This splits
+                  I/O processing up across multiple threads, and therefor multiple
+                  CPUs. libvirt recommends that the number of queues used should match
+                  the number of CPUs allocated for optimal performance.
+                type: boolean
               bootstrapDns:
                 description: BootstrapDNS - initial DNS nameserver values to set on
                   the VM when they are provisioned. Note that subsequent TripleO deployment
@@ -84,6 +144,13 @@ spec:
                 default: enp2s0
                 description: Interface to use for ctlplane network
                 type: string
+              dedicatedIOThread:
+                default: false
+                description: DedicatedIOThread - Disks with dedicatedIOThread set
+                  to true will be allocated an exclusive thread. This is generally
+                  useful if a specific Disk is expected to have heavy I/O traffic,
+                  e.g. a database spindle.
+                type: boolean
               deploymentSSHSecret:
                 description: name of secret holding the stack-admin ssh keys
                 type: string
@@ -95,8 +162,20 @@ spec:
                 items:
                   type: string
                 type: array
-              domainName:
-                description: Domain name used to build fqdn
+              ioThreadsPolicy:
+                description: IOThreadsPolicy - IO thread policy for the domain. Currently
+                  valid policies are shared and auto. If IOThreadsPolicy is default,
+                  use of IOThreads will be disabled. However, if any disk requests
+                  a dedicated IOThread, ioThreadsPolicy will be enabled and default
+                  to shared. When ioThreadsPolicy is set to auto IOThreads will also
+                  be "isolated" from the vCPUs and placed on the same physical CPU
+                  as the QEMU emulator thread. An ioThreadsPolicy of shared indicates
+                  that KubeVirt should use one thread that will be shared by all disk
+                  devices.
+                enum:
+                - default
+                - auto
+                - shared
                 type: string
               isTripleoRole:
                 description: in case of external functionality, like 3rd party network
